--- a/src/app/admin/primary/primary.component.html
+++ b/src/app/admin/primary/primary.component.html
@@ -31,13 +31,13 @@
                                     <div> <b>{{'common.remaining' | translate}}:</b> {{ element.totalCost - element.paid
                                         }}</div>
                                     <div class="d-flex">
-                                        <b>{{'common.room' | translate}}:</b>&nbsp;
+                                        <b>{{'common.room' | translate}}:</b>
                                         <ng-container *ngIf="element.room; else empty">
                                             {{ element.room }}
                                         </ng-container>
                                     </div>
                                     <div class="d-flex">
-                                        <b>{{'common.gender' | translate}}:</b>&nbsp;
+                                        <b>{{'common.gender' | translate}}:</b>
                                         <ng-container [ngSwitch]="element.gender">
                                             <ng-container *ngSwitchCase="model.gender.male">
                                                 {{ 'common.male' | translate }}
@@ -48,7 +48,7 @@
                                         </ng-container>
                                     </div>
                                     <div class="d-flex">
-                                        <b>{{'common.bookingType' | translate}}:</b> &nbsp;
+                                        <b>{{'common.bookingType' | translate}}:</b> 
                                         <ng-container [ngSwitch]="element.bookingType">
                                             <div *ngSwitchCase="1">
                                                 {{ 'common.individual' | translate }}
@@ -56,7 +56,7 @@
                                             <div *ngSwitchDefault>
                                                 {{ 'common.group' | translate }}
                                             </div>
-                                            &nbsp;
+                                            
                                             <div class="d-flex">
                                                 (
                                                 <ng-container *ngIf="element.roomType; else empty">
@@ -88,13 +88,13 @@
                                     <div> <b>{{'common.bookingDate' | translate}}:</b> {{element.bookingDate.toMillis()
                                         | date:'medium'}}</div>
                                     <div class="d-flex">
-                                        <b>{{'common.lastUpdateDate' | translate}}:</b>&nbsp;
+                                        <b>{{'common.lastUpdateDate' | translate}}:</b>
                                         <ng-container *ngIf="element.lastUpdateDate; else empty">
                                             {{element.lastUpdateDate.toMillis() | date:'medium'}}
                                         </ng-container>
                                     </div>
                                     <div class="d-flex">
-                                        <b>{{'common.lastUpdatedBy' | translate}}:</b>&nbsp;
+                                        <b>{{'common.lastUpdatedBy' | translate}}:</b>
                                         <ng-container
                                             *ngIf="element.lastUpdatedBy; else empty">{{element.lastUpdatedBy}}</ng-container>
                                     </div>
@@ -119,7 +119,7 @@
                                                 {{'common.edit' | translate}}
                                             </button>
                                             <button *ngIf="element.bookingStatus != model.bookingStatus.deleted"
-                                                mat-menu-item class="text-danger" (click)="delete(element)">
+                                                mat-menu-item class="text-danger" (click)="remove(element)">
                                                 {{'common.delete' | translate}}
                                             </button>
                                         </mat-menu>
@@ -153,22 +153,22 @@
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'table.counts' | translate}}</th>
                         <td mat-cell *matCellDef="let element">
                             <div class="d-flex">
-                                <div class="fw-bold">{{'table.adultsCount' | translate}}: &nbsp;</div>
+                                <div class="fw-bold">{{'table.adultsCount' | translate}}: </div>
                                 <div>{{ element.adultsCount + 1 }}</div>
                             </div>
                             <div class="d-flex">
-                                <div class="fw-bold">{{'table.childrenCount' | translate}}: &nbsp;</div>
+                                <div class="fw-bold">{{'table.childrenCount' | translate}}: </div>
                                 <div>{{ element.childrenCount }}</div>
                             </div>
                         </td>
                         <td mat-footer-cell *matFooterCellDef>
                             <div class="d-flex flex-column justify-content-center align-items-center">
                                 <div class="d-flex">
-                                    <div class="fw-bold">{{'table.adultsCount' | translate}}: &nbsp;</div>
+                                    <div class="fw-bold">{{'table.adultsCount' | translate}}: </div>
                                     <div>{{getAllAdultsCount()}}</div>
                                 </div>
                                 <div class="d-flex">
-                                    <div class="fw-bold">{{'table.childrenCount' | translate}}: &nbsp;</div>
+                                    <div class="fw-bold">{{'table.childrenCount' | translate}}: </div>
                                     <div>{{ getAllChildrenCount() }}</div>
                                 </div>
                             </div>
@@ -284,17 +284,17 @@
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.price' | translate}}</th>
                         <td mat-cell *matCellDef="let element">
                             <div class="d-flex">
-                                <div class="fw-bold">{{'common.totalCost' | translate}}:&nbsp;</div>
+                                <div class="fw-bold">{{'common.totalCost' | translate}}:</div>
                                 <a (click)="viewCostDetails(element)" class="total">
                                     {{element.totalCost}}
                                 </a>
                             </div>
                             <div class="d-flex">
-                                <div class="fw-bold">{{'common.paid' | translate}}:&nbsp;</div>
+                                <div class="fw-bold">{{'common.paid' | translate}}:</div>
                                 <div>{{element.paid}}</div>
                             </div>
                             <div class="d-flex">
-                                <div class="fw-bold">{{'common.remaining' | translate}}:&nbsp;</div>
+                                <div class="fw-bold">{{'common.remaining' | translate}}:</div>
                                 <div>{{ element.totalCost - element.paid }}</div>
                             </div>
                         </td>
@@ -313,13 +313,13 @@
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.notes' | translate}}</th>
                         <td mat-cell *matCellDef="let element" class="text-truncate">
                             <div class="d-flex" [matTooltip]="element.userNotes" matTooltipPosition="above">
-                                <div>{{'common.userNotes' | translate}}:&nbsp;</div>
+                                <div>{{'common.userNotes' | translate}}:</div>
                                 <ng-container *ngIf="element.userNotes; else empty">
                                     {{element.userNotes}}
                                 </ng-container>
                             </div>
                             <div class="d-flex" [matTooltip]="element.adminNotes" matTooltipPosition="above">
-                                <div>{{'common.adminNotes' | translate}}:&nbsp;</div>
+                                <div>{{'common.adminNotes' | translate}}:</div>
                                 <ng-container *ngIf="element.adminNotes; else empty">
                                     {{element.adminNotes}}
                                 </ng-container>
@@ -332,7 +332,7 @@
                         <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'common.lastUpdate' | translate}}</th>
                         <td mat-cell *matCellDef="let element">
                             <div class="d-flex">
-                                <div class="fw-bold">{{'common.lastUpdatedBy' | translate}}:&nbsp;</div>
+                                <div class="fw-bold">{{'common.lastUpdatedBy' | translate}}:</div>
                                 <ng-container
                                     *ngIf="element.lastUpdatedBy; else empty">{{element.lastUpdatedBy}}</ng-container>
                             </div>
@@ -354,7 +354,7 @@
                                     {{'common.edit' | translate}}
                                 </button>
                                 <button *ngIf="element.bookingStatus != model.bookingStatus.deleted" mat-menu-item
-                                    class="text-danger" (click)="delete(element)">
+                                    class="text-danger" (click)="remove(element)">
                                     {{'common.delete' | translate}}
                                 </button>
                             </mat-menu>
@@ -376,15 +376,15 @@
     <i class="fa-solid fa-ellipsis-vertical"></i>
     <mat-menu #menu="matMenu">
         <button mat-menu-item class="primary" (click)="showAdvancedFilter()">
-            <i class="fa-solid fa-filter"></i>&nbsp;
+            <i class="fa-solid fa-filter"></i>
             البحث المتقدم
         </button>
         <button mat-menu-item class="primary" (click)="openExportModal()">
-            <i class="fa-solid fa-download"></i>&nbsp;
+            <i class="fa-solid fa-download"></i>
             تصدير الأعضاء
         </button>
         <button mat-menu-item class="primary" (click)="add()">
-            <i class="fa-regular fa-square-plus"></i>&nbsp;
+            <i class="fa-regular fa-square-plus"></i>
             إضافة أشتراك
         </button>
     </mat-menu>
